--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 Flask = "^2.1.2"
 sqlacodegen = "^2.3.0"
 psycopg2-binary = "^2.9.3"
+SQLAlchemy = "^1.4.36"
 
 [tool.poetry.dev-dependencies]
 
