--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,9 @@ Flask = "^2.1.2"
 sqlacodegen = "^2.3.0"
 psycopg2-binary = "^2.9.3"
 SQLAlchemy = "^1.4.36"
+jwt = "^1.3.1"
+PyJWT = "^2.3.0"
+fernet = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 
